--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ld36",
   "version": "0.1.0",
   "description": "",
-  "main": "server.js",
+  "main": "src/server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -22,5 +22,9 @@
     "babel-loader": "^6.2.5",
     "babel-preset-es2015": "^6.14.0",
     "webpack": "^1.13.2"
+  },
+  "dependencies": {
+    "rot-js": "^0.6.2",
+    "socket.io": "^1.4.8"
   }
 }
